--- a/back_end/package.json
+++ b/back_end/package.json
@@ -17,6 +17,8 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.1"
+    "mongoose": "^6.2.1",
+    "multer": "^1.4.4",
+    "uuid": "^8.3.2"
   }
 }
