--- a/back_end/package.json
+++ b/back_end/package.json
@@ -21,6 +21,7 @@
     "mongoose-aggregate-paginate-v2": "^1.0.6",
     "mongoose-paginate-v2": "^1.6.3",
     "multer": "^1.4.4",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "validator": "^13.7.0"
   }
 }
