--- a/front_end/package.json
+++ b/front_end/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "5.0.0",
     "react-slick": "^0.28.1",
     "react-spinners": "^0.11.0",
+    "react-toastify": "^8.2.0",
     "redux": "^4.1.2",
     "slick-carousel": "^1.8.1",
     "validator": "^13.7.0",
