--- a/back_end/config.env
+++ b/back_end/config.env
@@ -1,3 +1,4 @@
 DATABASE = mongodb+srv://raviraj:solanki010@cluster0.6w8jl.mongodb.net/merndata?retryWrites=true&w=majority
 PORT = 5000
 SECRET_KEY = MYFULLNAMEISSOLANKIRAVIRAJLAXMANSINH
+EXPIRE_TIME = "12h"
