--- a/front_end/package.json
+++ b/front_end/package.json
@@ -21,6 +21,7 @@
     "react-spinners": "^0.11.0",
     "react-toastify": "^8.2.0",
     "redux": "^4.1.2",
+    "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
