--- a/back_end/package.json
+++ b/back_end/package.json
@@ -24,7 +24,7 @@
     "multer": "^1.4.4",
     "nodemon": "^2.0.15",
     "path": "^0.12.7",
-    "uuid": "^8.3.2"
-   
+    "uuid": "^8.3.2",
+    "validator": "^13.7.0"
   }
 }
