--- a/back_end/package.json
+++ b/back_end/package.json
@@ -22,6 +22,7 @@
     "mongoose-aggregate-paginate-v2": "^1.0.6",
     "mongoose-paginate-v2": "^1.6.3",
     "multer": "^1.4.4",
+    "nodemailer": "^6.7.3",
     "nodemon": "^2.0.15",
     "path": "^0.12.7",
     "uuid": "^8.3.2",
